--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -21,6 +21,20 @@
         .padding-left {
             padding-left: 50px;
         }
+
+
+        .custom-alert {
+
+            display: inline-block; 
+
+            color: #000000;
+            background-color: rgb(248, 215, 218);
+            border-color: #dc3545;
+            padding: .75rem 1.25rem;
+            border-radius: .25rem;
+            margin-top: 50px;
+            }
+
     </style>
 
 
@@ -71,6 +85,14 @@
                 <button type="submit" class="btn btn-primary">
                     <i class="fas fa-search"></i>
                 </button>
+            </div>
+            <div class="container d-flex justify-content-center align-items-center">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} custom-alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                <!-- Reszta twojego formularza -->
             </div>
         </form>
     </div>
