champions done/ contact ong

--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
     <title>Wpisz nazwę gracza</title>
 
     <style>
@@ -19,9 +23,12 @@
         }
 
         .padding-left {
-            padding-left: 50px;
+            padding-left: 30px;
         }
 
+        .margin-left2 {
+            margin-left: 15px;
+        }
 
         .custom-alert {
 
@@ -35,6 +42,31 @@
             margin-top: 50px;
             }
 
+
+        #navMenu {
+            display: none;
+            width: 24%;
+            height: 100vh;
+            background-color: rgba(40, 38, 43, 0.9); /* Czarne tło z przezroczystością */
+            color: white;
+            position: fixed;
+            top: 0px;
+            left: 0; /* Menu wyświetlane z lewej strony */
+            z-index: 1000;
+            padding: 20px; /* Dodatkowe wcięcie dla treści menu */
+            border-radius: .40rem;
+            border-color: rgba(0, 0, 0, 0.9);
+            display: flex;
+            justify-content: center; /* Centruje przycisk w poziomie */
+        }   
+
+        .move-button {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            /* margin-left: 100px; */
+        
+        }
     </style>
 
 
@@ -47,10 +79,14 @@
     <div class="row">
         <div class="col-md-1"> </div>
         <!-- Lewa strona -->
-        <div class="col text-center padding-left ">
-            {% if user.is_authenticated %}
+        <div class="col text-center">
+            
+            <button class="btn btn-primary" type="button" id="menuToggle" style="margin-right: 100px;">
+                <i class="bi bi-list"></i>
+            </button>
+            <!-- {% if user.is_authenticated %}
                 <button class="btn btn-info color-white" type="button" disabled>Welcome, {{ user.username }}!</button>
-            {% endif %}
+            {% endif %} -->
         </div>
 
         <!-- Prawa strona -->
@@ -66,6 +102,25 @@
         <div class="col-md-1"> </div>
     </div>
 </div>
+
+
+    <div id="navMenu" style="display: none;">
+        <div class="move-button">
+            {% if user.is_authenticated %}
+                <button class="btn btn-info color-white " type="button" disabled>Welcome, {{ user.username }}!</button>
+            {% endif %}
+        </div>
+        <div>
+            <a href="{% url 'champions' %}" class="btn btn-link d-flex align-items-center " style="margin-top: 20px;">
+                <i class="bi bi-people-fill me-2 fs-3"></i> <i class="margin-left2">Champions</i>   
+            </a>
+        </div>
+        <div>    
+            <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
+                <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
+            </a>
+        </div>
+    </div>
 
 
     <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
@@ -96,6 +151,18 @@
             </div>
         </form>
     </div>
+
+    <script>
+        document.getElementById('menuToggle').addEventListener('click', function() {
+            var menu = document.getElementById('navMenu');
+            if (menu.style.display === 'none') {
+                menu.style.display = 'block';
+            } else {
+                menu.style.display = 'none';
+            }
+        });
+    </script>
+
 
 </body>
 </html>
