--- a/kyrciapgg/kyrciapp/templates/contact.html
+++ b/kyrciapgg/kyrciapp/templates/contact.html
@@ -34,7 +34,7 @@
             margin-left: 15px;
         }
 
-        .custom-alert {
+        .custom-alert-red {
             display: inline-block; 
             color: #000000;
             background-color: rgb(248, 215, 218);
@@ -43,7 +43,16 @@
             border-radius: .25rem;
             margin-top: 50px;
             }
-
+        
+        .custom-alert-green {
+            display: inline-block; 
+            color: #ffffff;
+            background-color: rgb(67, 161, 72);
+            border-color: #1a4d27;
+            padding: .75rem 1.25rem;
+            border-radius: .25rem;
+            margin-top: 50px;
+            }
 
         #navMenu {
             display: none;
@@ -170,8 +179,13 @@
             <i class="bi bi-people-fill me-2 fs-3"></i> <i class="margin-left2">Champions</i>   
         </a>
     </div>
-    <!--  więcej linków tutaj -->
+    <div>    
+        <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
+            <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
+        </a>
+    </div>
 </div>
+
 
 
 
@@ -196,6 +210,15 @@
                     <textarea class="form-control color-dark" id="message" name="message" rows="3" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Send</button>
+                {% if messages %}
+                    <div class="alert-messages">
+                        {% for message in messages %}
+                        <div class="alert {% if message.tags == 'success' %}custom-alert-green{% elif message.tags == 'error' %}custom-alert-red{% endif %}">
+                            {{ message }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
             </form>
         </div>  
     </div>
