--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -67,6 +69,14 @@
             /* margin-left: 100px; */
         
         }
+        /* body {
+            
+            background-image: url('{% static "images/talon1.png" %}');
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+            
+        } */
     </style>
 
 
