--- a/kyrciapgg/kyrciapp/templates/player_info.html
+++ b/kyrciapgg/kyrciapp/templates/player_info.html
@@ -53,8 +53,6 @@
         font-size: 20px;
     }
 
-
-<style>
     .game-container {
     display: flex;
     align-items: center;
@@ -205,6 +203,9 @@
         /* margin-left: 100px; */
         }
 
+    .margin-style{
+        margin-top: 20px;
+    }
 </style>
 
 <body class="bg-dark text-white d-flex justify-content-center align-items-top" style="min-height: 100vh;">
@@ -252,14 +253,22 @@
                 {% if user.is_authenticated %}
                     <button class="btn btn-info color-white " type="button" disabled>Welcome, {{ user.username }}!</button>
                 {% endif %}
+                <button class="btn btn-secondary margin-style" type="button" id="closeMenuButton">
+                    <i class="bi bi-x-lg"></i> Close
+                </button>
             </div>
             <div>
                 <a href="{% url 'champions' %}" class="btn btn-link d-flex align-items-center " style="margin-top: 20px;">
                     <i class="bi bi-people-fill me-2 fs-3"></i> <i class="margin-left2">Champions</i>   
                 </a>
             </div>
-            <!--  więcej linków tutaj -->
+            <div>    
+                <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
+                    <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
+                </a>
+            </div>
         </div>
+    
 
     
     <div class="row">
@@ -636,6 +645,11 @@
             menu.style.display = 'none';
         }
     });
+    document.getElementById('closeMenuButton').addEventListener('click', function() {
+        var menu = document.getElementById('navMenu');
+        menu.style.display = 'none';
+    });
+
 </script>
 
 
