--- a/kyrciapgg/kyrciapp/templates/profile.html
+++ b/kyrciapgg/kyrciapp/templates/profile.html
@@ -129,8 +129,13 @@
                 <i class="bi bi-people-fill me-2 fs-3"></i> <i class="margin-left2">Champions</i>   
             </a>
         </div>
-        <!--  więcej linków tutaj -->
+        <div>    
+            <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
+                <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
+            </a>
+        </div>
     </div>
+
 
 
 <!-- Formularz do dodawania obserwowanych graczy -->
@@ -170,7 +175,7 @@
                 
                 <li class="list-group-item d-flex justify-content-between align-items-center custom-card white-space: nowrap" >
                     <a href="{% url 'player_info_with_args' summoner_name=summoner.name region=summoner.region %} "class="no-wrap">
-                        {{ summoner.name }} ({{ summoner.region }})
+                        {{ summoner.name }} 
    
                     </a>
                     <div class="rank-info">
